--- a/_content.scss
+++ b/_content.scss
@@ -1,4 +1,59 @@
+#home{
+	background-color:#ebeff4;
+	padding-top:30px;
 
+	.row{
+		margin-bottom:30px;
+
+		.secao-a, .secao-b {
+			border-radius:5px;
+			background-color:#FFFFFF;
+
+			.desc, .foto{
+				float:left;
+				width:50%;
+			}
+
+			.desc{
+				text-align:left;
+				padding:30px 25px;
+
+				h2{
+					display:inline-block;
+					padding-bottom:10px;
+					border-bottom:1px solid #F0F0F0;
+					margin-bottom:10px;
+				}
+
+				a{
+					margin-top:30px;
+					display:inline-block;
+					color:#6691ff;
+				}
+				a:hover{
+					color:#b2c8ff;
+				}
+			}
+		}
+	}
+}
+
+#parceiros{
+	padding:30px 0;
+	text-align:left;
+	background-color:#FFFFFF;
+
+	h3{
+		display:inline-block;
+		padding-bottom:10px;
+		border-bottom:1px solid #F0F0F0;
+		margin-bottom:10px;
+	}
+
+	p{
+		margin-bottom:30px;
+	}
+}
 
 @media (max-width: 991px) {
 
