--- a/hover.css
+++ b/hover.css
@@ -970,7 +970,7 @@
   -webkit-transition-property: color, background-color;
   transition-property: color, background-color; }
   .hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
-    background-color: #FFFFFF;
+    background-color: #3873b8;
     color: white; }
 
 /* Back Pulse */
@@ -1002,7 +1002,7 @@
     animation-timing-function: linear;
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
-    background-color: #FFFFFF;
+    background-color: #3873b8;
     background-color: #2098d1;
     color: white; }
 
@@ -1026,7 +1026,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 0 50%;
@@ -1063,7 +1063,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 100% 50%;
@@ -1100,7 +1100,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleY(0);
     transform: scaleY(0);
     -webkit-transform-origin: 50% 0;
@@ -1137,7 +1137,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleY(0);
     transform: scaleY(0);
     -webkit-transform-origin: 50% 100%;
@@ -1174,7 +1174,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 0 50%;
@@ -1213,7 +1213,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 100% 50%;
@@ -1252,7 +1252,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleY(0);
     transform: scaleY(0);
     -webkit-transform-origin: 50% 0;
@@ -1291,7 +1291,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleY(0);
     transform: scaleY(0);
     -webkit-transform-origin: 50% 100%;
@@ -1332,7 +1332,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     border-radius: 100%;
     -webkit-transform: scale(0);
     transform: scale(0);
@@ -1357,7 +1357,7 @@
   box-shadow: 0 0 1px transparent;
   position: relative;
   overflow: hidden;
-  background: #FFFFFF;
+  background: #3873b8;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -1394,7 +1394,7 @@
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px transparent;
   position: relative;
-  background: #FFFFFF;
+  background: #3873b8;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -1443,7 +1443,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scale(0);
     transform: scale(0);
     -webkit-transition-property: transform;
@@ -1466,7 +1466,7 @@
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px transparent;
   position: relative;
-  background: #FFFFFF;
+  background: #3873b8;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -1479,7 +1479,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: #e1e1e1;
+    background: #FFFFFF;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
     -webkit-transform-origin: 50%;
@@ -1491,7 +1491,7 @@
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out; }
   .hvr-shutter-in-horizontal:hover, .hvr-shutter-in-horizontal:focus, .hvr-shutter-in-horizontal:active {
-    color: white; }
+    color: white !important; }
     .hvr-shutter-in-horizontal:hover:before, .hvr-shutter-in-horizontal:focus:before, .hvr-shutter-in-horizontal:active:before {
       -webkit-transform: scaleX(0);
       transform: scaleX(0); }
@@ -1517,7 +1517,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
     -webkit-transform-origin: 50%;
@@ -1542,7 +1542,7 @@
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px transparent;
   position: relative;
-  background: #FFFFFF;
+  background: #3873b8;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -1593,7 +1593,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     -webkit-transform: scaleY(0);
     transform: scaleY(0);
     -webkit-transform-origin: 50%;
@@ -1625,7 +1625,7 @@
   box-shadow: inset 0 0 0 4px #e1e1e1, 0 0 1px transparent;
   /* Hack to improve aliasing on mobile/tablet devices */ }
   .hvr-border-fade:hover, .hvr-border-fade:focus, .hvr-border-fade:active {
-    box-shadow: inset 0 0 0 4px #FFFFFF, 0 0 1px transparent;
+    box-shadow: inset 0 0 0 4px #3873b8, 0 0 1px transparent;
     /* Hack to improve aliasing on mobile/tablet devices */ }
 
 /* Hollow */
@@ -1826,7 +1826,7 @@
     left: 0;
     right: 100%;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 1px;
     -webkit-transition-property: right;
     transition-property: right;
@@ -1853,7 +1853,7 @@
     left: 50%;
     right: 50%;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 4px;
     -webkit-transition-property: left, right;
     transition-property: left, right;
@@ -1881,7 +1881,7 @@
     left: 100%;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 4px;
     -webkit-transition-property: left;
     transition-property: left;
@@ -1908,7 +1908,7 @@
     left: 0;
     right: 100%;
     top: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 4px;
     -webkit-transition-property: right;
     transition-property: right;
@@ -1935,7 +1935,7 @@
     left: 50%;
     right: 50%;
     top: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 4px;
     -webkit-transition-property: left, right;
     transition-property: left, right;
@@ -1963,7 +1963,7 @@
     left: 100%;
     right: 0;
     top: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 4px;
     -webkit-transition-property: left;
     transition-property: left;
@@ -1991,7 +1991,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    border-color: #FFFFFF;
+    border-color: #3873b8;
     border-style: solid;
     border-width: 0;
     -webkit-transition-property: border-width;
@@ -2021,7 +2021,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 4px;
     -webkit-transform: translateY(4px);
     transform: translateY(4px);
@@ -2051,7 +2051,7 @@
     left: 0;
     right: 0;
     top: 0;
-    background: #FFFFFF;
+    background: #3873b8;
     height: 4px;
     -webkit-transform: translateY(-4px);
     transform: translateY(-4px);
@@ -3613,7 +3613,7 @@
     left: 0;
     background: white;
     /* IE9 */
-    background: linear-gradient(135deg, white 45%, #aaa 50%, #ccc 56%, white 80%);
+    background: linear-gradient(135deg, white 45%, #aaa 50%, #FFFFFF 56%, white 80%);
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff', endColorstr='#000000');
     /*For IE7-8-9*/
     z-index: 1000;
@@ -3644,7 +3644,7 @@
     right: 0;
     background: white;
     /* IE9 */
-    background: linear-gradient(225deg, white 45%, #aaa 50%, #ccc 56%, white 80%);
+    background: linear-gradient(225deg, white 45%, #aaa 50%, #FFFFFF 56%, white 80%);
     box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
@@ -3672,7 +3672,7 @@
     right: 0;
     background: white;
     /* IE9 */
-    background: linear-gradient(315deg, white 45%, #aaa 50%, #ccc 56%, white 80%);
+    background: linear-gradient(315deg, white 45%, #aaa 50%, #FFFFFF 56%, white 80%);
     box-shadow: -1px -1px 1px rgba(0, 0, 0, 0.4);
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
@@ -3700,7 +3700,7 @@
     left: 0;
     background: white;
     /* IE9 */
-    background: linear-gradient(45deg, white 45%, #aaa 50%, #ccc 56%, white 80%);
+    background: linear-gradient(45deg, white 45%, #aaa 50%, #FFFFFF 56%, white 80%);
     box-shadow: 1px -1px 1px rgba(0, 0, 0, 0.4);
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
