--- a/style.scss
+++ b/style.scss
@@ -43,9 +43,13 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	}
 
 	h2{
-		color:#514aa3;
+		color:#0048ff;
 		font-size: 24px;
-		font-weight: bold;		
+	}
+
+	h3{
+		color:#343841;
+		font-size:21px;
 	}
 
 	h4{
