--- a/style.css
+++ b/style.css
@@ -46,7 +46,16 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   #page #topo {
     background-color: black; }
   #page nav#principal {
-    background-color: #3876ba;
+    background: #3876ba;
+    /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left, #354899, #3a70b6);
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(left, #354899, #3a70b6);
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(left, #354899, #3a70b6);
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to left, #354899, #3a70b6);
+    /* Standard syntax */
     padding: 10px 0; }
   #page nav#secundario {
     background-color: #FFFFFF; }
