--- a/style.scss
+++ b/style.scss
@@ -53,10 +53,12 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	}
 
 	h4{
+		color:#343841;
 		font-size:18px;
 	}
 
 	h5{
+		color:#343841;
 		font-size:16px;
 	}
 
