--- a/_footer.scss
+++ b/_footer.scss
@@ -1,6 +1,7 @@
 #footer{
-	padding:60px 0;
+	padding:40px 0;
 	background-color:#ebeff4;
+    text-align: left;
 
 	a{
 		color:#343841;
@@ -8,6 +9,77 @@
 	a:hover{
 		color:#b2b7c2;
 	}
+
+    ul{
+        padding:0;
+        list-style: none;
+        text-align: left;
+    }
+
+    h5{
+        text-align: left;
+        padding-bottom:10px;
+        border-bottom:1px solid #ccd5e0;
+        margin-bottom:10px;
+        display: inline-block;
+        padding-right:20px;
+    }
+
+    ul.redes_sociais_footer{
+        height: 30px;
+        text-align: left;
+        list-style:none;
+        margin-bottom:0;
+    }
+
+    ul.redes_sociais_footer li:hover{
+        opacity: 0.6;
+        filter: alpha(opacity=60); /* For IE8 and earlier */
+    }
+
+    ul.redes_sociais_footer li{
+        margin-right: 5px;
+    }
+
+    ul.redes_sociais_footer a{
+        display: inline-block;
+        width:32px;
+        height:30px;
+    }
+
+    ul.redes_sociais_footer .youtube{
+        background-image: url("images/redes-bot.jpg");
+
+        background-position: left,center;
+        background-repeat:no-repeat;
+        width:32px;
+        height:30px;
+        display:inline-block;       
+    }
+
+    ul.redes_sociais_footer .instagram{
+        background-image: url("images/redes-bot.jpg");
+        background-position: -41px,center;
+        background-repeat:no-repeat;
+        width:32px;
+        height:30px;
+        display:inline-block;       
+    }
+
+    ul.redes_sociais_footer .twitter{
+        background-image: url("images/redes-bot.jpg");
+        background-position: -82px,center;
+        background-repeat:no-repeat;
+        width:32px;
+        height:30px;
+        display:inline-block;       
+    }
+
+}
+
+#copy{
+    padding:30px 0;
+	background-color:#cad3df;
 }
 
 @media (max-width: 991px) {  
