--- a/_header.scss
+++ b/_header.scss
@@ -4,10 +4,10 @@
 
 nav#principal{
     background: #3876ba; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(left,#354899, #3a70b6); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(left,#354899, #3a70b6); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(left,#354899, #3a70b6); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to left,#354899, #3a70b6); /* Standard syntax */
+    background: -webkit-linear-gradient(right,#1d7bbf, #384d9c); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right,#1d7bbf, #384d9c); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right,#1d7bbf, #384d9c); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right,#1d7bbf, #384d9c); /* Standard syntax */
     padding:10px 0;
 }
 
