--- a/_header.scss
+++ b/_header.scss
@@ -20,7 +20,15 @@ nav#secundario{
             padding: 10px 30px;
             color:#343841;
             font-size:16px;
+            -webkit-transition: color 0.5s ease-in-out;
+            -moz-transition: color 0.5s ease-in-out;
+            -o-transition: color 0.5s ease-in-out;
+            -ms-transition: color 0.5s ease-in-out;    
+            transition: color 0.5s ease-in-out;
+        }
 
+        a:hover{
+            color:#0048ff;
         }
 
     }
@@ -83,7 +91,7 @@ nav#secundario.fixar {
     -webkit-transition: opacity 1s ease-in-out;
     -moz-transition: opacity 1s ease-in-out;
     -o-transition: opacity 1s ease-in-out;
-    -ms-transition: opacity 1s ease-in-out;    
+    -ms-transition: opacity 1s ease-in-out;
     transition: opacity 1s ease-in-out;
 }
  
