--- a/_footer.scss
+++ b/_footer.scss
@@ -14,6 +14,10 @@
         padding:0;
         list-style: none;
         text-align: left;
+
+        li{
+            margin-bottom:8px;
+        }
     }
 
     h5{
