--- a/_content.scss
+++ b/_content.scss
@@ -28,6 +28,12 @@
 				text-align:left;
 				padding:30px 25px;
 
+				h1{
+					display:inline-block;
+					padding-bottom:20px;
+					border-bottom:1px solid #F0F0F0;
+					margin-bottom:20px;
+				}
 
 				h2{
 					display:inline-block;
@@ -157,7 +163,47 @@
 	}
 }
 
-@media (max-width: 768px) {
+#breadcrumbs{
+	background-color:#ebeff4;
+	text-align:left;
+	padding:15px 0;
+}
+
+#elevadores{
+	h1{
+		color:#226ffd;
+		text-align:left;
+	}
+
+	.audio-desc{
+		color:#226ffd;
+	}
+
+	.titulo{
+		margin-top:25px;
+		margin-bottom:25px;
+	}
+
+	#myTabs{
+		border-top:1px solid #226ffd;
+		border-bottom:1px solid #226ffd;
+		list-style-type: none;
+		padding:0;
+
+		li{
+			float:left;
+			width:16.66%;
+
+			a{
+				color:#226ffd;
+				display:block;
+				padding:15px 0px;
+			}
+		}
+	}
+}
+
+@media (max-width: 992px) {
 	.secao-a {
 		display: -webkit-box;
 		display: -moz-box;
