--- a/_header.scss
+++ b/_header.scss
@@ -27,6 +27,10 @@ nav#secundario{
             transition: color 0.5s ease-in-out;
         }
 
+        a:first-child{
+            padding-right:0;
+        }
+
         a:hover{
             color:#0048ff;
         }
@@ -99,7 +103,7 @@ nav#secundario.fixar {
     opacity:0;
 }
 
-@media (max-width: 768px) {  
+@media (max-width: 992px) {  
     div.menu-responsivo{
         width: 50px;
         text-align: left;
