--- a/style.scss
+++ b/style.scss
@@ -37,9 +37,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	}
 
 	h1{
-		color:#514aa3;
+		color:#0048ff;
 		font-size: 24px;
-		font-weight: bold;
 	}
 
 	h2{
